--- a/nr-add-ps-doc/ig/doc_ps.html
+++ b/nr-add-ps-doc/ig/doc_ps.html
@@ -265,14 +265,16 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
 La structure d'une posologie est un bon exemple de la complexité des données de santé. Pour la standardiser correctement, il est nécessaire de prévoir :
 
-- Un nombre de comprimés minimal et maximal
-- Des conditions de prise (exemple : "si douleur", "à jeun")
-- Une durée de traitement
-- Une fréquence (matin, midi, soir)
-- Des instructions particulières
+* Un nombre de comprimés minimal et maximal
+* Des conditions de prise (exemple : "si douleur", "à jeun")
+* Une durée de traitement
+* Une fréquence (matin, midi, soir)
+* Des instructions particulières
 
 Il est indispensable qu'un prescripteur définisse précisément tous ces éléments attendus pour que les experts interopérabilité puissent concevoir des spécifications complètes et utilisables dans la pratique quotidienne.
 </div>
+
+<p>Pour faciliter cette collaboration entre professionnels de santé et experts techniques, des outils méthodologiques ont été développés. Les <strong>modèles logiques</strong>, présentés plus bas dans ce document, constituent justement le pont permettant aux PS d’exprimer leurs besoins métier dans un langage compréhensible avant leur traduction technique en standard FHIR.</p>
 
 <h3 id="le-standard-fhir">Le standard FHIR</h3>
 
@@ -329,7 +331,7 @@ Il est indispensable qu'un prescripteur définisse précisément tous ces élém
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 13:08+0000">2025-12-22</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 13:10+0000">2025-12-22</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
