--- a/nr-add-ps-doc/ig/doc_ps.html
+++ b/nr-add-ps-doc/ig/doc_ps.html
@@ -264,11 +264,11 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 <strong>Exemple concret : la posologie</strong><br /><br />
 La structure d'une posologie est un bon exemple de la complexité des données de santé. Pour la standardiser correctement, il est nécessaire de prévoir :<br /><br />
 <ul>
-<li>Un nombre de comprimés minimal et maximal</li>
-<li>Des conditions de prise (exemple : "si douleur", "à jeun")</li>
-<li>Une durée de traitement</li>
-<li>Une fréquence (matin, midi, soir)</li>
-<li>Des instructions particulières</li>
+<li style="color: var(--body-color)">Un nombre de comprimés minimal et maximal</li>
+<li style="color: var(--body-color)">Des conditions de prise (exemple : "si douleur", "à jeun")</li>
+<li style="color: var(--body-color)">Une durée de traitement</li>
+<li style="color: var(--body-color)">Une fréquence (matin, midi, soir)</li>
+<li style="color: var(--body-color)">Des instructions particulières</li>
 </ul>
 <br />
 Il est indispensable qu'un prescripteur définisse précisément tous ces éléments attendus pour que les experts interopérabilité puissent concevoir des spécifications complètes et utilisables dans la pratique quotidienne.
@@ -278,9 +278,9 @@ Il est indispensable qu'un prescripteur définisse précisément tous ces élém
 
 <h3 id="le-standard-fhir">Le standard FHIR</h3>
 
-<p>FHIR (Fast Healthcare Interoperability Resources) est un standard international développé par HL7 pour faciliter l’échange de données de santé. Concrètement, FHIR définit des “ressources” standardisées (Patient, Consultation, Prescription, etc.) qui représentent les concepts métier que vous utilisez quotidiennement. Grâce à FHIR, les informations que vous produisez peuvent être comprises par n’importe quel système compatible, permettant ainsi une meilleure coordination des soins et réduisant les ressaisies manuelles d’informations.</p>
+<p>FHIR (Fast Healthcare Interoperability Resources) est un standard international développé par l’organisation internationale Health Level 7 (HL7) pour faciliter l’échange de données de santé. Concrètement, FHIR définit des “ressources” standardisées (Patient, Consultation, Prescription, etc.) qui représentent les concepts métier que vous utilisez quotidiennement. Grâce à FHIR, les informations que vous produisez peuvent être comprises par n’importe quel système compatible, permettant ainsi une meilleure coordination des soins et réduisant les ressaisies manuelles d’informations.</p>
 
-<p>Ce standard est commun à tous les cas d’usages car il est international : recherche, biologie, administratif, …. Pour gagner en interopérabilité, il faut le spécialiser pour la France, pour l’Europe et pour chaque cas d’usages dans des guides d’implémentation.</p>
+<p>Ce standard est très générique pour former un socle commun à tous les cas d’usages et international : recherche, biologie, administratif, … Ainsi, il est très peu contraignant et ne garantit pas de facto une interopérabilité parfaite. Pour gagner en interopérabilité, il faut le spécialiser pour la France, pour l’Europe et pour chaque cas d’usages dans des guides d’implémentation.</p>
 
 <h3 id="les-guides-dimplémentation">Les guides d’implémentation</h3>
 
@@ -331,7 +331,7 @@ Il est indispensable qu'un prescripteur définisse précisément tous ces élém
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 13:14+0000">2025-12-22</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 13:18+0000">2025-12-22</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
