--- a/nr-add-ps-doc/ig/doc_ps.html
+++ b/nr-add-ps-doc/ig/doc_ps.html
@@ -227,6 +227,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
   <li><a href="#le-standard-fhir" id="markdown-toc-le-standard-fhir">Le standard FHIR</a></li>
   <li><a href="#les-guides-dimplémentation" id="markdown-toc-les-guides-dimplémentation">Les guides d’implémentation</a></li>
   <li><a href="#les-modèles-logiques" id="markdown-toc-les-modèles-logiques">Les modèles logiques</a></li>
+  <li><a href="#exemple-concret-de-la-eprescription" id="markdown-toc-exemple-concret-de-la-eprescription">Exemple concret de la ePrescription</a></li>
 </ul>
 
 </div>
@@ -295,6 +296,9 @@ FHIR seul est trop générique et peu contraignant pour garantir une interopéra
 
 <p>Un modèle logique est une représentation structurée et simplifiée des données métier, indépendante de toute technologie. Il décrit “ce qui doit être échangé” (par exemple : les informations essentielles d’une consultation) sans entrer dans les détails techniques du “comment”. Les modèles logiques servent de pont entre votre compréhension métier des soins et la représentation technique en FHIR. Ils permettent de valider que les spécifications techniques répondent bien à vos besoins professionnels avant leur mise en œuvre dans les logiciels.</p>
 
+<h3 id="exemple-concret-de-la-eprescription">Exemple concret de la ePrescription</h3>
+
+<p>La Haute Autorité de Santé (HAS) a organisé un groupe de travail autour de la <a href="https://www.has-sante.fr/jcms/p_3555137/fr/structuration-de-la-posologie-des-medicaments">structuration de la posologie</a> fournissant une description métier très précise de ce qui est attendu de la posologie. Ce document a permis aux experts interopérabilité d’InteropSanté et de l’ANS de générer un modèle logique et de créer des profils FHIR sur la structuration de la posologie <strong>(lien à rajouter lorsque l’IG sera publié)</strong>.</p>
 
 
 
@@ -336,7 +340,7 @@ FHIR seul est trop générique et peu contraignant pour garantir une interopéra
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 13:24+0000">2025-12-22</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 13:31+0000">2025-12-22</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
