--- a/nr-add-ps-doc/ig/qa-ipreview.html
+++ b/nr-add-ps-doc/ig/qa-ipreview.html
@@ -166,7 +166,7 @@ L’éditeur de profils FSH (Grammaire de définition de profils) :           <a
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.9 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Mon, Dec 22, 2025 13:24+0000">2025-12-22</span>
+. Generated           <span title="Mon, Dec 22, 2025 13:31+0000">2025-12-22</span>
 
                     <br/>
 
@@ -196,7 +196,7 @@ L’éditeur de profils FSH (Grammaire de définition de profils) :           <a
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.9 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Mon, Dec 22, 2025 13:24+0000">2025-12-22</span>
+. Generated           <span title="Mon, Dec 22, 2025 13:31+0000">2025-12-22</span>
 
                     <br/>
 
@@ -1166,6 +1166,19 @@ Pour rappel, les bonnes pratiques imposent de respecter les modélisations faite
         </td>
         <td>
 Capture d'écran du webinaire d'          <a href="https://www.youtube.com/watch?v=JGmJWUkX1nU">introduction à l'interopérabilité</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="doc_ps.html">web</a>
+        </td>
+        <td>
+          <a href="https://www.has-sante.fr/jcms/p_3555137/fr/structuration-de-la-posologie-des-medicaments">www.has-sante.fr</a>
+        </td>
+        <td>
+La Haute Autorité de Santé (HAS) a organisé un groupe de travail autour de la           <a href="https://www.has-sante.fr/jcms/p_3555137/fr/structuration-de-la-posologie-des-medicaments">structuration de la posologie</a>
+ fournissant une description métier très précise de ce qui est attendu de la posologie. Ce document a permis aux experts interopérabilité d’InteropSanté et de l’ANS de générer un modèle logique et de créer des profils FHIR sur la structuration de la posologie           <strong>(lien à rajouter lorsque l’IG sera publié)</strong>
+.
         </td>
       </tr>
       <tr>
