--- a/nr-add-ps-doc/ig/bonnes_pratiques_modeler.html
+++ b/nr-add-ps-doc/ig/bonnes_pratiques_modeler.html
@@ -97,10 +97,10 @@
     <a href="index.html">Accueil</a>
   </li>
   <li>
-    <a href="doc_ps.html">Documentation des professionnels de santé</a>
+    <a href="doc_ps.html">Professionnels de santé</a>
   </li>
   <li class="dropdown">
-    <a data-toggle="dropdown" href="#" class="dropdown-toggle">Documentation des FHIR modelers
+    <a data-toggle="dropdown" href="#" class="dropdown-toggle">FHIR modelers
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
@@ -119,7 +119,7 @@
     </ul>
   </li>
   <li class="dropdown">
-    <a data-toggle="dropdown" href="#" class="dropdown-toggle">Documentation des FHIR implementers
+    <a data-toggle="dropdown" href="#" class="dropdown-toggle">FHIR implementers
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
@@ -516,7 +516,7 @@ Ce choix n’est pas tranché, c’est l’écosystème qui dictera quelle versi
 
       <div class="inner-wrapper">
         <p>
-          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 13:31+0000">2025-12-22</span>
+          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 13:47+0000">2025-12-22</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
