--- a/nr-add-ps-doc/ig/doc_ps.html
+++ b/nr-add-ps-doc/ig/doc_ps.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en">
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
-    <title>Documentation des professionnels de santé - Documentation des guides d'implémentation de l'ANS v0.1.9</title>
+    <title>Professionnels de santé - Documentation des guides d'implémentation de l'ANS v0.1.9</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="author" content="http://hl7.org/fhir"/>
@@ -97,10 +97,10 @@
     <a href="index.html">Accueil</a>
   </li>
   <li>
-    <a href="doc_ps.html">Documentation des professionnels de santé</a>
+    <a href="doc_ps.html">Professionnels de santé</a>
   </li>
   <li class="dropdown">
-    <a data-toggle="dropdown" href="#" class="dropdown-toggle">Documentation des FHIR modelers
+    <a data-toggle="dropdown" href="#" class="dropdown-toggle">FHIR modelers
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
@@ -119,7 +119,7 @@
     </ul>
   </li>
   <li class="dropdown">
-    <a data-toggle="dropdown" href="#" class="dropdown-toggle">Documentation des FHIR implementers
+    <a data-toggle="dropdown" href="#" class="dropdown-toggle">FHIR implementers
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
@@ -174,7 +174,7 @@
     <div id="segment-breadcrumb" class="segment">  <!-- segment-breadcrumb -->
       <div class="container">  <!-- container -->
         <ul class="breadcrumb">
-          <li><a href='toc.html'><b>Table of Contents</b></a></li><li><b>Documentation des professionnels de santé</b></li>
+          <li><a href='toc.html'><b>Table of Contents</b></a></li><li><b>Professionnels de santé</b></li>
 
           <span style="float:right;">
 
@@ -205,7 +205,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 </style>
 <div class="col-12">
   <!--ReleaseHeader--><p id="publish-box">Documentation des guides d'implémentation de l'ANS - version de développement local (v0.1.9) construite par les outils de publication FHIR (HL7® FHIR® Standard). Voir le <a href='https://interop.esante.gouv.fr/ig/documentation/history.html'>répertoire des versions publiées</a></p><!--EndReleaseHeader-->
-  <h2>Documentation des professionnels de santé</h2>
+  <h2>Professionnels de santé</h2>
   
 
 
@@ -340,7 +340,7 @@ FHIR seul est trop générique et peu contraignant pour garantir une interopéra
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 13:31+0000">2025-12-22</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 13:47+0000">2025-12-22</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
