--- a/nr-add-ps-doc/ig/qa-ipreview.html
+++ b/nr-add-ps-doc/ig/qa-ipreview.html
@@ -166,7 +166,7 @@ L’éditeur de profils FSH (Grammaire de définition de profils) :           <a
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.9 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Tue, Dec 23, 2025 14:56+0000">2025-12-23</span>
+. Generated           <span title="Tue, Dec 23, 2025 15:04+0000">2025-12-23</span>
 
                     <br/>
 
@@ -196,7 +196,7 @@ L’éditeur de profils FSH (Grammaire de définition de profils) :           <a
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.9 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Tue, Dec 23, 2025 14:56+0000">2025-12-23</span>
+. Generated           <span title="Tue, Dec 23, 2025 15:04+0000">2025-12-23</span>
 
                     <br/>
 
@@ -886,6 +886,34 @@ Le fichier           <a href="https://fshschool.org/docs/sushi/configuration/">s
 Une des plus importantes parties de l’IG est la documentation narrative, celle-ci est écrite en           <a href="https://kramdown.gettalong.org/">kramdown</a>
 .
 Ces pages sont à ajouter dans input/pagecontent avec l’extension .md. A noter que ces pages doivent être directement contenues dans le dossier pagecontent et ne peuvent pas avoir d’arborescence de dossiers.
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="dev_nouvel_ig.html">web</a>
+        </td>
+        <td>
+          <a href="https://github.com/ansforge/IG-modele/tree/main/.github">github.com</a>
+        </td>
+        <td>
+1/ Rajouter le           <a href="https://github.com/ansforge/IG-modele/tree/main/.github">dossier .github</a>
+ au répertoire GitHub.
+2/ Lancer l’action dans l’onglet           <code class="language-plaintext highlighter-rouge">Actions</code>
+, qui va générer une branche gh-pages
+3/ Paramétrer le répertoire dans l’onglet           <code class="language-plaintext highlighter-rouge">pages</code>
+ pour lancer un déploiement sur la branche gh-pages
+4/ L’IG en version intégration continue devient accessible à l’adresse https://[ajouter_nom_org].github.io/[ajouter_nom_repo]/[ajouter_nom_de_la_branche]/ig
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="dev_nouvel_ig.html">web</a>
+        </td>
+        <td>
+          <a href="https://github.com/ansforge/IG-workflows">github.com</a>
+        </td>
+        <td>
+Le code source du workflow est           <a href="https://github.com/ansforge/IG-workflows">disponible sur GitHub</a>
         </td>
       </tr>
       <tr>
